[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/texture/petoman.png" type="Texture" id=1]
[ext_resource path="res://beings/dude/dude.gd" type="Script" id=2]
[ext_resource path="res://assets/texture/vida.png" type="Texture" id=3]
[ext_resource path="res://assets/texture/petoman_long.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 1.5 )

[sub_resource type="ShaderMaterial" id=11]

[sub_resource type="Animation" id=3]
resource_name = "air"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "get_up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit_on_air"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "knocked"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "stop"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="RectangleShape2D" id=10]

[node name="dude" type="KinematicBody2D"]
script = ExtResource( 2 )
speed = 100.0
lerp_speed = 8.0
texture_long = ExtResource( 4 )

[node name="standing_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="knocked_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 2 )
disabled = true

[node name="pivot" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="pivot"]
material = SubResource( 11 )
texture = ExtResource( 1 )
hframes = 8
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/air = SubResource( 3 )
anims/get_up = SubResource( 4 )
anims/hit_on_air = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/knocked = SubResource( 7 )
anims/run = SubResource( 8 )
anims/stop = SubResource( 9 )

[node name="interact_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_area"]
shape = SubResource( 10 )

[node name="interactuable_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactuable_area"]
shape = SubResource( 10 )

[node name="label_revivir" type="Label" parent="."]
visible = false
margin_left = -39.0
margin_top = -24.0
margin_right = 38.0
margin_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 0.498039, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Revivir - X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="particles_revive" type="CPUParticles2D" parent="."]
position = Vector2( 0, -5 )
emitting = false
amount = 4
one_shot = true
explosiveness = 0.8
randomness = 1.0
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, -10 )
initial_velocity = 20.0
